# sqlness

./: .gitignore  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/local/: input.result  input.sql
examples/: bad.rs  basic.rs  basic.toml  interceptor_arg.rs
examples/basic-case/simple/: config.toml
scripts/: insert-license.sh
sqlness/: Cargo.toml
sqlness-cli/: Cargo.toml
sqlness-cli/src/: main.rs
sqlness-cli/tests/mysql/local/: input.result
sqlness-cli/tests/postgresql/local/: input.result  input.sql
sqlness/examples/: bad.rs  basic.rs  basic.toml  echo.rs  interceptor.rs  interceptor_arg.rs  interceptor_env.rs  interceptor_replace.rs  interceptor_sort_result.rs
sqlness/examples/bad-case/simple/: select.result
sqlness/examples/basic-case/simple/: select.result  select.sql
sqlness/examples/echo/interceptor-env/: env.result  env.sql
sqlness/examples/echo/interceptor-replace/: replace.sql
sqlness/examples/interceptor-arg/simple/: input.result  input.sql
sqlness/examples/interceptor-case/simple/: input.result  input.sql
sqlness/examples/interceptor-env/simple/: env.result  env.sql
sqlness/examples/interceptor-replace/simple/: replace.result  replace.sql
sqlness/examples/interceptor-sort-result/simple/: sort_result.result  sort_result.sql
sqlness/src/: case.rs  config.rs  database.rs  environment.rs  error.rs  interceptor.rs  lib.rs  runner.rs
sqlness/src/database_impl/: mod.rs  postgresql.rs
sqlness/src/interceptor/: arg.rs  env.rs  replace.rs  sleep.rs  sort_result.rs  template.rs
src/: case.rs  config.rs  database.rs  environment.rs  error.rs  interceptor.rs  lib.rs  runner.rs
src/database_impl/: mod.rs  mysql.rs  setup.rs
src/interceptor/: arg.rs
