[package]
name = "sqlness"
version = "0.3.0"
edition = "2021"
authors = [
    "CeresDB Authors <ceresdbservice@gmail.com>",
    "Ruihang Xia <waynestxia@gmail.com>",
]
repository = "https://github.com/CeresDB/sqlness"
license = "Apache-2.0"
description = "SQL integration test harness"

[dependencies]
async-trait = "0.1"
derive_builder = "0.11"
mysql = { version = "23.0.1", optional = true }
prettydiff = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.23", features = ["full"] }
toml = "0.5"
walkdir = "2.3"

[features]
default = []
