[workspace]
members = ["sqlness", "sqlness-cli"]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = [
    "CeresDB Authors <ceresdbservice@gmail.com>",
    "Ruihang Xia <waynestxia@gmail.com>",
]
repository = "https://github.com/CeresDB/sqlness"
homepage = "https://github.com/CeresDB/sqlness"
license = "Apache-2.0"
keywords = ["sql", "database", "cli"]