[workspace]
members = ["sqlness", "sqlness-cli"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = [
    "CeresDB Authors <ceresdbservice@gmail.com>",
    "Ruihang Xia <waynestxia@gmail.com>",
]
repository = "https://github.com/CeresDB/sqlness"
homepage = "https://github.com/CeresDB/sqlness"
license = "Apache-2.0"
keywords = ["sql", "database", "cli"]
readme = "README.md"
