[package]
name = "sqlness-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
clap = { version = "4.1.8", features = [ "derive" ] }
futures = "0.3.26"
sqlness = { path = "..", features = [ "mysql" ] }
