[package]
name = "sqlness"
description = "SQL integration test harness"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[dependencies]
async-trait = "0.1"
derive_builder = "0.11"
handlebars = "4"
mysql = { version = "23.0.1", optional = true }
postgres = { version = "0.19.7", optional = true }
prettydiff = { version = "0.6.2", default_features = false }
regex = "1.7.1"
thiserror = "1.0"
toml = "0.5"
walkdir = "2.3"

[dev-dependencies]
tokio = { version = "1.23", features = ["full"] }

[features]
default = []
