[package]
name = "sqlness"
description = "SQL integration test harness"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[dependencies]
async-trait = "0.1"
derive_builder = "0.11"
futures = "0.3.26"
hierarchical_hash_wheel_timer = "1.2.0"
minijinja = "1"
mysql = { version = "23.0.1", optional = true }
once_cell = "1.19.0"
postgres = { version = "0.19.7", optional = true }
prettydiff = { version = "0.6.2", default_features = false }
regex = "1.7.1"
serde_json = "1"
thiserror = "1.0"
toml = "0.5"
uuid = "1.8.0"
walkdir = "2.3"

[dev-dependencies]
tokio = { version = "1.23", features = ["full"] }

[features]
default = []
